# app/Models/Employee.php
@@ -9,14 +9,23 @@ class Employee extends Model
 {
     use HasFactory;
     public $timestamps = false;
+    protected $casts = [
+        'salary' => 'float',
+        'hire_date' => 'date',
+        'department_id' => 'integer',
+        'role_id' => 'integer',
+        'is_above_average' => 'boolean'
+    ];
+
     protected $fillable = ['name', 'email', 'position', 'salary', 'hire_date', 'department_id', 'role_id'];
 
-    public function department(){
-        return $this-> belongsTo(Department::class);
+    public function department()
+    {
+        return $this->belongsTo(Department::class);
     }
 
-    public function role(){
+    public function role()
+    {
         return $this->belongsTo(Role::class);
     }
-
 }
